--- a/reports.html
+++ b/reports.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -318,49 +318,35 @@ averages.forEach(a => {
 });
 
   
-const { data, error } = await supabase
+
+  /* ===== RAW RESULTS ===== */
+  /* ===== RAW RESULTS ===== */
+const { data } = await supabase
   .from("assessment_results")
   .select(`
     remarks,
-    students (
-      first_name,
-      last_name,
-      admission_number,
-      school ( name ),
-      classes ( name )
-    ),
-    competencies (
-      name,
-      subjects ( name )
-    ),
-    achievement_levels ( label )
+students(
+  first_name,
+  last_name,
+  admission_number,
+  classes(name),
+  school(name)
+),
+
+
+    competencies(name,subjects(name)),
+    achievement_levels(label)
   `)
   .eq("term", termName)
   .eq("academic_year", SYSTEM_YEAR);
-
-
-if (error) {
-  console.error("Assessment results error:", error);
-  status.innerText = "Failed to load results.";
-  return;
-}
-
-
-// ===== SCHOOL & CLASS (FROM FIRST RECORD) =====
-const schoolName =
-  data[0].students.school?.name ?? "";
-
-const className =
-  data[0].students.classes?.name ?? "";
-
-
-
- 
-if (!data || data.length === 0) {
+if (!data.length) {
   status.innerText = "No results found.";
   return;
 }
+const schoolName = data[0]?.students?.school?.name ?? "—";
 
+
+const className  = data[0]?.students?.classes?.name ?? "—";
 
   /* ===== NORMALIZED RECORDS ===== */
   const records = data.map(r => ({
@@ -426,12 +412,13 @@ function renderOverviewHeader({ school, className, term, year }) {
     return `
 <div class="a4-page learner-page">
   <div class="learner-card">
-renderOverviewHeader({
+${renderOverviewHeader({
   school: schoolName,
-  className,
+  className: className,
   term: termName,
   year: SYSTEM_YEAR
-});
+})}
+
 
 
     <!-- HEADER -->
