--- a/reports.html
+++ b/reports.html
@@ -462,8 +462,10 @@ ${renderOverviewHeader({
         <ul>${recommendations.learner.map(r => `<li>${r}</li>`).join("")}</ul>
       </div>` : ""}
 
-    Object.entries(subjects).map(([subject, rows]) => {
-  if (subject.startsWith("__")) return ""; // skip __admission, __school, __className
+    <!-- SUBJECTS -->
+    ${Object.entries(subjects).map(([subject, rows]) => {
+      if (subject === "__admission") return "";
+
       const evidence = getEvidenceStatus(rows);
 
       // compute subject average
@@ -883,14 +885,52 @@ function renderTrendChart(admission) {
 }
   
   /* ===== TERM VIEW ===== */
+  if (viewMode.value === "term") {
+  const grouped = {};
+  records.forEach(r => {
+    grouped[r.student] ??= { __admission: r.admission };
+    grouped[r.student][r.subject] ??= [];
+    grouped[r.student][r.subject].push(r);
+  });
+records.forEach(r => {
+  grouped[r.student] ??= {
+    __admission: r.admission,
+    __school: r.school,
+    __className: r.className
+  };
+  grouped[r.student][r.subject] ??= [];
+  grouped[r.student][r.subject].push(r);
+});
+
+    reportDiv.innerHTML = `
+  <h3>${termName} – ${SYSTEM_YEAR}</h3>
+  ${renderGrouped(grouped)}
+`;
+requestAnimationFrame(() => {
+  splitLearnerIntoPages();
+});
+
+setTimeout(() => {
+  Object.values(grouped).forEach(s => {
+    if (s.__admission) {
+      renderTrendChart(s.__admission);
+    }
+  });
+}, 0);
+
+
+  }
+
+  /* ===== STUDENT VIEW ===== */
+ 
 /* ===== TERM VIEW ===== */
 if (viewMode.value === "term") {
   const grouped = {};
   records.forEach(r => {
     grouped[r.student] ??= {
       __admission: r.admission,
-      __school: r.school ?? "—",
-      __className: r.className ?? "—"
+      __school: r.school,
+      __className: r.className
     };
     grouped[r.student][r.subject] ??= [];
     grouped[r.student][r.subject].push(r);
@@ -909,7 +949,6 @@ if (viewMode.value === "term") {
     });
   }, 0);
 }
-
 
 /* ===== STUDENT VIEW ===== */
 if (viewMode.value === "student") {
@@ -931,8 +970,8 @@ if (viewMode.value === "student") {
     filtered.forEach(r => {
       grouped[r.student] ??= {
         __admission: r.admission,
-        __school: r.school ?? "—",
-        __className: r.className ?? "—"
+        __school: r.school,
+        __className: r.className
       };
       grouped[r.student][r.subject] ??= [];
       grouped[r.student][r.subject].push(r);
@@ -949,7 +988,6 @@ if (viewMode.value === "student") {
     }, 0);
   });
 }
-
 
 /* ===== SUBJECT VIEW ===== */
 if (viewMode.value === "subject") {
@@ -973,8 +1011,8 @@ if (viewMode.value === "subject") {
     filtered.forEach(r => {
       grouped[r.student] ??= {
         __admission: r.admission,
-        __school: r.school ?? "—",
-        __className: r.className ?? "—"
+        __school: r.school,
+        __className: r.className
       };
       grouped[r.student][r.subject] ??= [];
       grouped[r.student][r.subject].push(r);
@@ -992,9 +1030,8 @@ if (viewMode.value === "subject") {
         if (s.__admission) renderTrendChart(s.__admission);
       });
     }, 0);
-  });
-}
-
+  });   
+  }
 }
 
 termSelect.addEventListener("change", loadReport);
