--- a/reports.html
+++ b/reports.html
@@ -886,7 +886,22 @@ function renderTrendChart(admission) {
 });
 }
   
- /* ===== TERM VIEW ===== */
+
+
+function getTrend(currentAvg, previousAvg) {
+  if (previousAvg === null) return "🆕 New Entry";
+
+  const diff = currentAvg - previousAvg;
+
+  if (diff >= 0.3) return "📈 Improving";
+  if (diff <= -0.3) return "📉 Declining";
+  return "➖ Stable";
+}
+
+
+
+
+/* ===== TERM VIEW ===== */
 /* ===== STUDENT VIEW ===== */
 if (viewMode.value === "student") {
   filterBox.innerHTML = `
@@ -902,7 +917,7 @@ if (viewMode.value === "student") {
       return;
     }
 
-    // Ensure admission numbers are compared as strings
+    // Filter student records by admission number (as string)
     const filtered = records.filter(r => String(r.admission) === adm);
 
     if (!filtered.length) {
@@ -910,18 +925,24 @@ if (viewMode.value === "student") {
       return;
     }
 
+    // ===== GROUP RECORDS BY STUDENT AND SUBJECT =====
     const grouped = {};
     filtered.forEach(r => {
-      const studentName = r.student || `${r.first_name} ${r.last_name}` || "Unknown Student";
+      const studentName = r.student || `${r.first_name || ""} ${r.last_name || ""}`.trim() || "Unknown Student";
       const subject = r.subject || "—";
 
+      // Ensure student object exists
       grouped[studentName] ??= {
         __admission: r.admission,
         __school: r.schoolName || "—",
         __class: r.className || "—"
       };
 
-      grouped[studentName][subject] ??= [];
+      // Ensure subject is always an array
+      if (!Array.isArray(grouped[studentName][subject])) {
+        grouped[studentName][subject] = [];
+      }
+
       grouped[studentName][subject].push(r);
     });
 
@@ -963,16 +984,21 @@ if (viewMode.value === "subject") {
 
     const grouped = {};
     filtered.forEach(r => {
-      const studentName = r.student || `${r.first_name} ${r.last_name}` || "Unknown Student";
+      const studentName = r.student || `${r.first_name || ""} ${r.last_name || ""}`.trim() || "Unknown Student";
       const subj = r.subject || "—";
 
+      // Ensure student object exists
       grouped[studentName] ??= {
         __admission: r.admission,
         __school: r.schoolName || "—",
         __class: r.className || "—"
       };
 
-      grouped[studentName][subj] ??= [];
+      // Ensure subject is always an array
+      if (!Array.isArray(grouped[studentName][subj])) {
+        grouped[studentName][subj] = [];
+      }
+
       grouped[studentName][subj].push(r);
     });
 
@@ -982,32 +1008,17 @@ if (viewMode.value === "subject") {
     `;
 
     requestAnimationFrame(() => splitLearnerIntoPages());
-setTimeout(() => {
-  Object.values(grouped).forEach(s => {
-    if (s.__admission) renderTrendChart(s.__admission);
-   });
-      }, 0);
-    });
-  }
+
+    setTimeout(() => {
+      Object.values(grouped).forEach(s => {
+        if (s.__admission) renderTrendChart(s.__admission);
+      });
+    }, 0);
+  });
 }
 
 termSelect.addEventListener("change", loadReport);
 viewMode.addEventListener("change", loadReport);
-
-
-function getTrend(currentAvg, previousAvg) {
-  if (previousAvg === null) return "🆕 New Entry";
-
-  const diff = currentAvg - previousAvg;
-
-  if (diff >= 0.3) return "📈 Improving";
-  if (diff <= -0.3) return "📉 Declining";
-  return "➖ Stable";
-}
-
-
-
-
 
 
 window.downloadPDF = async function () {
