--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>  
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -141,6 +141,10 @@ tr:last-child td {
   overflow: visible;
 }
 
+.report-overview h3 {
+  font-size: 1.1em;
+  line-height: 1.2em;
+}
 
   
 </style>
@@ -189,6 +193,8 @@ const supabase = createClient(
 const SYSTEM_YEAR = "2026";
 
 let trendMap = {};
+let avgMap = {}; // make it global so downloadPDF can access it
+
 
 function levelToScore(level) {
   switch (level) {
@@ -231,6 +237,9 @@ termSelect.innerHTML =
   `<option value="">Select term</option>` +
   terms.map(t => `<option value="${t.id}">${t.name}</option>`).join("");
 
+
+
+ 
 /* ========== MAIN LOAD ========== */
 async function loadReport() {
   reportDiv.innerHTML = "";
@@ -304,70 +313,96 @@ if (previousTerm) {
 
 
 
-  
-  
+avgMap = {}; // populate it as before
+averages.forEach(a => {
+  const student = `${a.first_name} ${a.last_name}`;
+  const subj = a.subject_name.trim();
+  avgMap[student] ??= {};
+  avgMap[student][subj] = a;
+});
 
-  const avgMap = {};
-  averages.forEach(a => {
-    const student = `${a.first_name} ${a.last_name}`;
-    avgMap[student] ??= {};
-    avgMap[student][a.subject_name] = a;
-  });
+  
 
   /* ===== RAW RESULTS ===== */
-  const { data } = await supabase
-    .from("assessment_results")
-    .select(`
-      remarks,
-      students(first_name,last_name,admission_number),
-      competencies(name,subjects(name)),
-      achievement_levels(label)
-    `)
-    .eq("term", termName)
-    .eq("academic_year", SYSTEM_YEAR);
 
-  if (!data.length) {
-    status.innerText = "No results found.";
-    return;
-  }
+const { data, error } = await supabase
+  .from("assessment_results_view")
+  .select("*")
+  .eq("term", termName)
+  .eq("academic_year", SYSTEM_YEAR);
 
-  /* ===== NORMALIZED RECORDS ===== */
-  const records = data.map(r => ({
-    student: `${r.students.first_name} ${r.students.last_name}`,
-    admission: r.students.admission_number,
-    subject: r.competencies.subjects.name,
-    competency: r.competencies.name,
-    level: r.achievement_levels.label,
-    remarks: r.remarks
-  }));
+if (error) {
+  console.error("Supabase fetch error:", error);
+  status.innerText = "Error fetching report";
+  return;
+}
 
- 
-function renderGrouped(grouped) {
-  return Object.entries(grouped).map(([student, subjects], index) => {
+if (!data?.length) {
+  status.innerText = "No results found.";
+  return;
+}
+
+// school and class
+const schoolName = data[0]?.school_name ?? "—";
+const className  = data[0]?.class_name ?? "—";
+
+// normalized records
+const records = data.map(r => ({
+  student: `${r.first_name} ${r.last_name}`,
+  admission: r.admission_number,
+  className: r.class_name,
+  schoolName: r.school_name,
+  subject: r.subject,
+  competency: r.competency,
+  level: r.achievement_level,
+  remarks: r.remarks
+}));
+
+
+function renderOverviewHeader({ school, className, term, year }) {
+  return `
+    <div class="report-overview no-split" style="
+      border-bottom: 2px solid #333;
+      padding-bottom: 6px;
+      margin-bottom: 10px;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+    ">
+      <h3 style="margin:0; word-wrap: break-word; overflow-wrap: break-word;">${school}</h3>
+      <div style="font-size:0.9em;color:#555;">
+        <strong>Class:</strong> ${className} &nbsp; | &nbsp;
+        <strong>Term:</strong> ${term} – ${year}
+      </div>
+    </div>
+  `;
+}
+
+
+
+ function renderGrouped(grouped, avgMap) {
+  return Object.entries(grouped).map(([student, subjects]) => {
 
     const admission = subjects.__admission || "N/A";
 
-    /* ===== COLLECT SCORES ===== */
-    const allScores = [];
+    // Collect raw scores for trends & support flags (not for averages)
+    const currentScores = [];
     Object.entries(subjects).forEach(([subject, rows]) => {
       if (subject === "__admission") return;
       rows.forEach(r => {
-        const s = levelToScore(r.level);
-        if (s > 0) allScores.push(s);
+        const score = levelToScore(r.level);
+        if (score > 0) currentScores.push(score);
       });
     });
 
-    const currentAvg =
-      allScores.length
-        ? allScores.reduce((a,b)=>a+b,0) / allScores.length
+    const currentAvgScore =
+      currentScores.length
+        ? currentScores.reduce((a, b) => a + b, 0) / currentScores.length
         : null;
 
     const prevData = previousAverages[admission];
-    const previousAvg = prevData
-      ? prevData.total / prevData.count
-      : null;
+    const previousAvg = prevData ? prevData.total / prevData.count : null;
 
-    const trend = getTrend(currentAvg, previousAvg);
+    const trend = getTrend(currentAvgScore, previousAvg);
     const supportFlag = generateSupportFlag(subjects);
     const insight = generateInsight(subjects);
     const { strengths, needs } = generateStrengthsAndNeeds(subjects);
@@ -376,6 +411,14 @@ function renderGrouped(grouped) {
     return `
 <div class="a4-page learner-page">
   <div class="learner-card">
+  ${renderOverviewHeader({
+  school: subjects.__school || schoolName,
+  className: subjects.__class || className,
+  term: termName,
+  year: SYSTEM_YEAR
+})}
+
+
 
     <!-- HEADER -->
     <div class="split-block learner-header" style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;">
@@ -403,13 +446,11 @@ function renderGrouped(grouped) {
         <strong>👩🏽‍🏫 Teacher Actions</strong>
         <ul>${recommendations.teacher.map(r => `<li>${r}</li>`).join("")}</ul>
       </div>` : ""}
-
     ${recommendations.parent.length ? `
       <div class="split-block" style="margin:10px 0;padding:10px;border-left:4px solid #f39c12;background:#fffaf3;">
         <strong>🏠 Parent Support</strong>
         <ul>${recommendations.parent.map(r => `<li>${r}</li>`).join("")}</ul>
       </div>` : ""}
-
     ${recommendations.learner.length ? `
       <div class="split-block" style="margin:10px 0;padding:10px;border-left:4px solid #2ecc71;background:#f6fffa;">
         <strong>🎯 Learner Focus</strong>
@@ -421,6 +462,27 @@ function renderGrouped(grouped) {
       if (subject === "__admission") return "";
 
       const evidence = getEvidenceStatus(rows);
+
+      // compute subject average
+      let subjectAvg = avgMap?.[student]?.[subject.trim()]?.average_score ?? null;
+      if (subjectAvg === null) {
+        const scores = rows.map(r => levelToScore(r.level)).filter(s => s > 0);
+        subjectAvg = scores.length ? scores.reduce((a,b)=>a+b,0)/scores.length : null;
+      }
+
+      function getAchievementLabel(score) {
+        if (score >= 3.5) return "Exceeding Expectations";
+        if (score >= 2.5) return "Meeting Expectations";
+        if (score >= 1.5) return "Approaching Expectations";
+        return "Below Expectations";
+      }
+
+      function getAvgColor(score) {
+        if (score >= 3.5) return "#2ecc71";
+        if (score >= 2.5) return "#3498db";
+        if (score >= 1.5) return "#f1c40f";
+        return "#e74c3c";
+      }
 
       return `
       <div class="split-block subject-block">
@@ -445,6 +507,23 @@ function renderGrouped(grouped) {
                 <td>${r.remarks || "—"}</td>
               </tr>`).join("")}
           </tbody>
+          ${subjectAvg !== null ? `
+          <tfoot>
+            <tr style="font-weight:bold; background:#f0f0f0;">
+              <td>SUBJECT AVERAGE</td>
+              <td colspan="2">
+                <span style="
+                  padding: 3px 8px;
+                  border-radius: 12px;
+                  font-weight:bold;
+                  color:white;
+                  background:${getAvgColor(subjectAvg)};
+                ">
+                  ${subjectAvg.toFixed(2)} — ${getAchievementLabel(subjectAvg)}
+                </span>
+              </td>
+            </tr>
+          </tfoot>` : ""}
         </table>
       </div>`;
     }).join("")}
@@ -455,10 +534,11 @@ function renderGrouped(grouped) {
     </div>
 
   </div>
-</div>
-`;
+</div>`;
   }).join("");
 }
+
+
 
 
 
@@ -474,7 +554,11 @@ function splitLearnerIntoPages() {
     let currentPage = page;
 
     Array.from(card.children).forEach(block => {
-      if (!block.classList.contains("split-block")) return;
+    if (
+  !block.classList.contains("split-block") ||
+  block.classList.contains("no-split")
+) return;
+
 
       const blockBottom =
         block.getBoundingClientRect().bottom -
@@ -709,7 +793,6 @@ function getEvidenceStatus(rows) {
 }
 
 
-
 const achievementBandsPlugin = {
   id: "achievementBands",
   beforeDraw(chart) {
@@ -721,7 +804,7 @@ const achievementBandsPlugin = {
       { from: 1, to: 2, color: "rgba(248,215,218,0.35)" }, // Below
       { from: 2, to: 3, color: "rgba(255,243,205,0.35)" }, // Approaching
       { from: 3, to: 4, color: "rgba(212,237,218,0.35)" }, // Meeting
-      { from: 4, to: 5, color: "rgba(204,229,255,0.35)" }  // Exceeding
+      { from: 4, to: 4.999, color: "rgba(204,229,255,0.35)" }  // Exceeding (slightly below max)
     ];
 
     ctx.save();
@@ -729,21 +812,31 @@ const achievementBandsPlugin = {
       const yTop = y.getPixelForValue(b.to);
       const yBottom = y.getPixelForValue(b.from);
       ctx.fillStyle = b.color;
-      ctx.fillRect(
-        chartArea.left,
-        yTop,
-        chartArea.right - chartArea.left,
-        yBottom - yTop
-      );
+      ctx.fillRect(chartArea.left, yTop, chartArea.right - chartArea.left, yBottom - yTop);
     });
     ctx.restore();
+  }
+};
+
+const chartOptions = {
+  responsive: true,
+  maintainAspectRatio: false,
+  plugins: { legend: { display: false } },
+  scales: {
+    y: {
+      min: 1,
+      max: 5, // match the Exceeding band
+      ticks: {
+        stepSize: 1,
+        callback: v => ["", "Below", "Approaching", "Meeting", "Exceeding"][v]
+      }
+    }
   }
 };
 
 
 
 
-  
 function renderTrendChart(admission) {
   const canvas = document.getElementById(`trend-${admission}`);
   if (!canvas) return;
@@ -938,7 +1031,10 @@ function getTrend(currentAvg, previousAvg) {
 
 
 
-window.downloadPDF = function () {
+
+  
+window.downloadPDF = async function () {
+ 
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
     return;
@@ -948,24 +1044,90 @@ window.downloadPDF = function () {
   const mode = viewMode.value;
 
   let filename = `Report_${term}_${SYSTEM_YEAR}.pdf`;
-
   if (mode === "student") filename = `Student_Report_${term}_${SYSTEM_YEAR}.pdf`;
   if (mode === "subject") filename = `Subject_Report_${term}_${SYSTEM_YEAR}.pdf`;
 
-  const element = reportDiv;
+  const clone = reportDiv.cloneNode(true);
 
+  // ===== REMOVE DETAILED TABLES =====
+  clone.querySelectorAll(".subject-block table, .split-block.recommendations, .split-block.subject-block").forEach(el => {
+    // Keep only subject average row if exists
+    const tfoot = el.querySelector("tfoot");
+    if (tfoot) el.replaceWith(tfoot); // replace table with only average row
+    else el.remove();
+  });
 
-const opt = {
-  margin: 0,
-  filename,
-  image: { type: "jpeg", quality: 0.98 },
-  html2canvas: { scale: 2, useCORS: true },
-  jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
+  // Remove on-screen trend boxes
+  clone.querySelectorAll(".trend-box").forEach(el => el.remove());
+
+  // ===== INSERT SMALL COMBINED CHARTS =====
+  const cards = clone.querySelectorAll(".learner-card");
+  for (const card of cards) {
+    const studentName = card.querySelector("h4")?.innerText.split("👤")[1]?.split("(Adm")[0]?.trim();
+    const admission = card.querySelector("h4")?.innerText.match(/\(Adm: (\d+)\)/)?.[1];
+    if (!admission) continue;
+
+    // Gather all subjects for this student
+    const subjects = Object.keys(avgMap?.[studentName] || {});
+    if (!subjects.length) continue;
+
+    // Collect scores for each subject
+    const datasets = subjects.map(subj => {
+      const score = avgMap[studentName][subj]?.average_score ?? 0;
+      return {
+        label: subj,
+        data: [score], // only one term in download
+        borderColor: getRandomColor(subj),
+        backgroundColor: "transparent",
+        tension: 0.2,
+        pointRadius: 3
+      };
+    });
+
+    const canvas = document.createElement("canvas");
+    canvas.width = 300;  // small width
+    canvas.height = 120; // small height
+    card.appendChild(canvas);
+
+    new Chart(canvas, {
+      type: "line",
+      data: {
+        labels: ["Current Term"],
+        datasets: datasets
+      },
+      options: {
+        responsive: false,
+        maintainAspectRatio: false,
+        plugins: {
+          legend: { position: "bottom", labels: { font: { size: 8 } } }
+        },
+        scales: {
+          y: { min: 1, max: 4, ticks: { stepSize: 1 } }
+        }
+      }
+    });
+  }
+
+  // ===== PDF OPTIONS =====
+  const opt = {
+    margin: 10,
+    filename,
+    image: { type: "jpeg", quality: 0.98 },
+    html2canvas: { scale: 2, useCORS: true },
+    jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
+  };
+
+  html2pdf().set(opt).from(clone).save();
 };
 
-html2pdf().set(opt).from(reportDiv).save();
-};
-
+// ===== HELPER: RANDOM COLOR PER SUBJECT =====
+function getRandomColor(seed) {
+  // consistent color per subject
+  let hash = 0;
+  for (let i = 0; i < seed.length; i++) hash = seed.charCodeAt(i) + ((hash << 5) - hash);
+  const c = (hash & 0x00FFFFFF).toString(16).toUpperCase();
+  return "#" + "00000".substring(0, 6 - c.length) + c;
+}
 
   
 </script>
