--- a/reports.html
+++ b/reports.html
@@ -1028,98 +1028,128 @@ function getTrend(currentAvg, previousAvg) {
 
 
 
-
-
-
-
-  
 window.downloadPDF = async function () {
- 
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
     return;
   }
 
   const term = termSelect.options[termSelect.selectedIndex]?.text || "Term";
-  const mode = viewMode.value;
-
-  let filename = `Report_${term}_${SYSTEM_YEAR}.pdf`;
-  if (mode === "student") filename = `Student_Report_${term}_${SYSTEM_YEAR}.pdf`;
-  if (mode === "subject") filename = `Subject_Report_${term}_${SYSTEM_YEAR}.pdf`;
+  const filename = `Summary_Report_${term}_${SYSTEM_YEAR}.pdf`;
 
   const clone = reportDiv.cloneNode(true);
 
-  // ===== REMOVE DETAILED TABLES =====
-  clone.querySelectorAll(".subject-block table, .split-block.recommendations, .split-block.subject-block").forEach(el => {
-    // Keep only subject average row if exists
-    const tfoot = el.querySelector("tfoot");
-    if (tfoot) el.replaceWith(tfoot); // replace table with only average row
-    else el.remove();
-  });
+  /* ===============================
+     1. REMOVE DETAILED CONTENT
+  =============================== */
+  clone.querySelectorAll(
+    ".subject-block, .trend-box, ul, .split-block:not(.learner-header)"
+  ).forEach(el => el.remove());
 
-  // Remove on-screen trend boxes
-  clone.querySelectorAll(".trend-box").forEach(el => el.remove());
-
-  // ===== INSERT SMALL COMBINED CHARTS =====
+  /* ===============================
+     2. BUILD SUMMARY PER LEARNER
+  =============================== */
   const cards = clone.querySelectorAll(".learner-card");
-  for (const card of cards) {
-    const studentName = card.querySelector("h4")?.innerText.split("👤")[1]?.split("(Adm")[0]?.trim();
-    const admission = card.querySelector("h4")?.innerText.match(/\(Adm: (\d+)\)/)?.[1];
-    if (!admission) continue;
 
-    // Gather all subjects for this student
-    const subjects = Object.keys(avgMap?.[studentName] || {});
-    if (!subjects.length) continue;
+  cards.forEach(card => {
+    const studentName =
+      card.querySelector("h4")?.innerText
+        .replace("👤", "")
+        .replace(/\(.*?\)/, "")
+        .trim();
 
-    // Collect scores for each subject
-    const datasets = subjects.map(subj => {
-      const score = avgMap[studentName][subj]?.average_score ?? 0;
-      return {
-        label: subj,
-        data: [score], // only one term in download
-        borderColor: getRandomColor(subj),
-        backgroundColor: "transparent",
-        tension: 0.2,
-        pointRadius: 3
-      };
-    });
+    const admission =
+      card.querySelector("h4")?.innerText.match(/\(Adm:\s*(\d+)\)/)?.[1];
 
+    const subjectData = avgMap?.[studentName];
+    if (!subjectData) return;
+
+    /* ===== SUMMARY TABLE ===== */
+    const table = document.createElement("table");
+    table.style.width = "100%";
+    table.style.borderCollapse = "collapse";
+    table.style.marginTop = "10px";
+    table.style.fontSize = "12px";
+
+    table.innerHTML = `
+      <thead>
+        <tr style="background:#f0f0f0;">
+          <th style="border:1px solid #000;padding:6px;">Learning Area</th>
+          <th style="border:1px solid #000;padding:6px;">Average Score</th>
+          <th style="border:1px solid #000;padding:6px;">Performance Level</th>
+          <th style="border:1px solid #000;padding:6px;">Teacher Comment</th>
+        </tr>
+      </thead>
+      <tbody>
+        ${Object.entries(subjectData).map(([subject, d]) => `
+          <tr>
+            <td style="border:1px solid #000;padding:6px;">${subject}</td>
+            <td style="border:1px solid #000;padding:6px;text-align:center;">
+              ${Number(d.average_score).toFixed(2)}
+            </td>
+            <td style="border:1px solid #000;padding:6px;">
+              ${d.achievement_level}
+            </td>
+            <td style="border:1px solid #000;padding:6px;">Fair work</td>
+          </tr>
+        `).join("")}
+      </tbody>
+    `;
+
+    card.appendChild(table);
+
+    /* ===============================
+       3. ONE COMBINED SUBJECT GRAPH
+    =============================== */
     const canvas = document.createElement("canvas");
-    canvas.width = 300;  // small width
-    canvas.height = 120; // small height
+    canvas.height = 180;
+    canvas.style.marginTop = "14px";
     card.appendChild(canvas);
 
     new Chart(canvas, {
-      type: "line",
+      type: "bar",
       data: {
-        labels: ["Current Term"],
-        datasets: datasets
+        labels: Object.keys(subjectData),
+        datasets: [{
+          label: "Subject Performance",
+          data: Object.values(subjectData).map(d => d.average_score),
+          backgroundColor: "#2c3e50"
+        }]
       },
       options: {
         responsive: false,
-        maintainAspectRatio: false,
-        plugins: {
-          legend: { position: "bottom", labels: { font: { size: 8 } } }
-        },
+        plugins: { legend: { display: false } },
         scales: {
-          y: { min: 1, max: 4, ticks: { stepSize: 1 } }
+          y: {
+            min: 1,
+            max: 4,
+            ticks: {
+              stepSize: 1,
+              callback: v =>
+                ["", "Below", "Approaching", "Meeting", "Exceeding"][v]
+            }
+          }
         }
       }
     });
-  }
+  });
 
-  // ===== PDF OPTIONS =====
-  const opt = {
-    margin: 10,
+  /* ===============================
+     4. PDF EXPORT
+  =============================== */
+  html2pdf().set({
+    margin: 12,
     filename,
     image: { type: "jpeg", quality: 0.98 },
     html2canvas: { scale: 2, useCORS: true },
     jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
-  };
-
-  html2pdf().set(opt).from(clone).save();
+  }).from(clone).save();
 };
 
+
+
+
+ 
 // ===== HELPER: RANDOM COLOR PER SUBJECT =====
 function getRandomColor(seed) {
   // consistent color per subject
