--- a/reports.html
+++ b/reports.html
@@ -1026,7 +1026,6 @@ function getTrend(currentAvg, previousAvg) {
   return "➖ Stable";
 }
 
-
 window.downloadPDF = async function () {
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
@@ -1039,93 +1038,104 @@ window.downloadPDF = async function () {
   const clone = reportDiv.cloneNode(true);
 
   /* ===============================
-     1. REMOVE DETAILED CONTENT
+     FORCE CLEAN A4 LAYOUT
+  =============================== */
+  clone.style.width = "210mm";
+  clone.style.margin = "0";
+  clone.style.padding = "0";
+  clone.style.boxSizing = "border-box";
+
+  /* ===============================
+     REMOVE DETAILED CONTENT
   =============================== */
   clone.querySelectorAll(
     ".subject-block, .trend-box, ul, .split-block:not(.learner-header)"
   ).forEach(el => el.remove());
 
-  /* ===============================
-     🔑 PREVENT CONTENT FROM CUTTING
-  =============================== */
-  clone.querySelectorAll(".learner-card, table").forEach(el => {
-    el.style.pageBreakInside = "avoid";
-    el.style.breakInside = "avoid";
-  });
-
-  /* ===============================
-     HELPER: COMMENT BY SCORE
-  =============================== */
-  function getCommentFromScore(avg) {
-    if (avg < 2) return "Put more effort";
-    if (avg < 3) return "Fair work";
-    if (avg < 3.5) return "Good progress";
-    return "Excellent work";
-  }
-
-  /* ===============================
-     2. BUILD SUMMARY PER LEARNER
-  =============================== */
   const cards = clone.querySelectorAll(".learner-card");
 
   cards.forEach(card => {
-    const header = card.querySelector("h4");
-    if (!header) return;
+    /* ===== RESET CARD POSITION ===== */
+    card.style.margin = "0";
+    card.style.padding = "0";
+    card.style.boxSizing = "border-box";
 
-    const studentName = header.innerText
-      .replace("👤", "")
-      .replace(/\(.*?\)/, "")
-      .trim();
+    /* ===== STRONG HEADER ===== */
+    const header = card.querySelector(".learner-header");
+    if (header) {
+      header.style.marginTop = "0";
+      header.style.paddingTop = "0";
+      header.style.fontSize = "18px";
+      header.style.fontWeight = "700";
+    }
+
+    const studentName =
+      card.querySelector("h4")?.innerText
+        .replace("👤", "")
+        .replace(/\(.*?\)/, "")
+        .trim();
 
     const subjectData = avgMap?.[studentName];
     if (!subjectData) return;
 
-    /* ===== SUMMARY TABLE ===== */
+    /* ===============================
+       COMMENT BY SCORE
+    =============================== */
+    function commentFromScore(score) {
+      if (score >= 3.5) return "Excellent work";
+      if (score >= 2.5) return "Good progress";
+      if (score >= 1.5) return "Fair work";
+      return "Put more effort";
+    }
+
+    /* ===============================
+       SUMMARY TABLE
+    =============================== */
     const table = document.createElement("table");
     table.style.width = "100%";
     table.style.borderCollapse = "collapse";
-    table.style.marginTop = "10px";
+    table.style.marginTop = "12px";
     table.style.fontSize = "12px";
-    table.style.pageBreakInside = "avoid";
+    table.style.tableLayout = "fixed";
 
     table.innerHTML = `
       <thead>
-        <tr style="background:#f0f0f0;">
-          <th style="border:1px solid #000;padding:6px;">Learning Area</th>
-          <th style="border:1px solid #000;padding:6px;">Average Score</th>
-          <th style="border:1px solid #000;padding:6px;">Performance Level</th>
-          <th style="border:1px solid #000;padding:6px;">Teacher Comment</th>
+        <tr>
+          <th style="border:1px solid #000;padding:6px;width:30%;">Learning Area</th>
+          <th style="border:1px solid #000;padding:6px;width:15%;">Average</th>
+          <th style="border:1px solid #000;padding:6px;width:25%;">Performance Level</th>
+          <th style="border:1px solid #000;padding:6px;width:30%;">Teacher Comment</th>
         </tr>
       </thead>
       <tbody>
-        ${Object.entries(subjectData)
-          .filter(([_, d]) => d && d.average_score != null)
-          .map(([subject, d]) => `
+        ${Object.entries(subjectData).map(([subject, d]) => {
+          const avg = Number(d.average_score);
+          return `
             <tr>
               <td style="border:1px solid #000;padding:6px;">${subject}</td>
               <td style="border:1px solid #000;padding:6px;text-align:center;">
-                ${Number(d.average_score).toFixed(2)}
+                ${avg.toFixed(2)}
               </td>
               <td style="border:1px solid #000;padding:6px;">
-                ${d.achievement_level || "—"}
+                ${d.achievement_level}
               </td>
               <td style="border:1px solid #000;padding:6px;">
-                ${getCommentFromScore(Number(d.average_score))}
+                ${commentFromScore(avg)}
               </td>
             </tr>
-          `).join("")}
+          `;
+        }).join("")}
       </tbody>
     `;
 
     card.appendChild(table);
 
     /* ===============================
-       3. COMPACT SUBJECT GRAPH
+       COMBINED SUBJECT GRAPH
     =============================== */
     const canvas = document.createElement("canvas");
     canvas.height = 160;
-    canvas.style.marginTop = "12px";
-    canvas.style.pageBreakInside = "avoid";
+    canvas.style.marginTop = "14px";
     card.appendChild(canvas);
 
     new Chart(canvas, {
@@ -1139,6 +1149,7 @@ window.downloadPDF = async function () {
       },
       options: {
         responsive: false,
+        maintainAspectRatio: false,
         plugins: { legend: { display: false } },
         scales: {
           y: {
@@ -1156,13 +1167,13 @@ window.downloadPDF = async function () {
   });
 
   /* ===============================
-     4. PDF EXPORT
+     EXPORT PDF (TOP-ALIGNED)
   =============================== */
   html2pdf().set({
-    margin: 12,
+    margin: [10, 10, 10, 10], // TOP, RIGHT, BOTTOM, LEFT
     filename,
     image: { type: "jpeg", quality: 0.98 },
-    html2canvas: { scale: 2, useCORS: true },
+    html2canvas: { scale: 2, scrollY: 0, useCORS: true },
     jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
   }).from(clone).save();
 };
